--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -1,5 +1,7 @@
 <header>
-  <h1 class="logo" (click)="goToHomePage()">CryptoBreak</h1>
+  <h1 class="logo" (click)="goToHomePage()">
+    Crypto<span style="color: #0091ff">Break</span>
+  </h1>
   <input type="checkbox" class="nav-toggle" id="nav-toggle" />
   <nav>
     <ul>
@@ -68,13 +70,10 @@
         <i class="fa fa-map-marker"></i>
         <p>Paris, France</p>
       </div>
-      <div class="social-icons">
-        <!-- Ajoutez vos logos de réseaux sociaux ici -->
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-instagram"></i>
-        <!-- Ajoutez autant d'icônes que nécessaire pour vos réseaux sociaux -->
-      </div>
+      <i class="fa fa-copyright"></i>
+      <p class="name">CryptoBreak &copy; 2024</p>
+
+      <p class="name"><i class="fa fa-briefcase"></i>Break Corporation LTD</p>
     </div>
 
     <div class="footer-right col-md-4 col-sm-6">
@@ -93,7 +92,6 @@
         |
         <a (click)="goToAboutPage()" style="color: white">About</a>
       </p>
-      <p class="name">CryptoBreak &copy; 2024</p>
     </div>
   </footer>
 </div>
