--- a/project-web-app/src/app/coin-detail/coin-detail.component.html
+++ b/project-web-app/src/app/coin-detail/coin-detail.component.html
@@ -1,4 +1,4 @@
-<section class="coin-detail_page">
+<section class="coin-detail_page" style="margin-top: 100px">
   <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
 
   <div class="content">
