--- a/project-web-app/src/app/welcome-page/welcome-page.component.html
+++ b/project-web-app/src/app/welcome-page/welcome-page.component.html
@@ -1,5 +1,5 @@
 <div class="welcome-container">
-  <h1>Welcome to <span>CryptoBreak </span>!</h1>
+  <h1>Welcome to Crypto<span style="color: #0091ff">Break</span>!</h1>
   <p>
     Embark on a journey into the world of cryptocurrencies with CryptoBreak!
   </p>
