--- a/project-web-app/src/app/connect/connect.component.css
+++ b/project-web-app/src/app/connect/connect.component.css
@@ -1,5 +1,4 @@
 .login-container {
-  background-color: rgba(44, 44, 44, 0.8);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
@@ -8,9 +7,11 @@
   margin-top: 40px;
   margin-bottom: 40px;
   position: relative;
+  margin-top: 30px;
 }
 
 .login-form {
+  margin-top: 90px;
   padding: 20px;
 }
 
