--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
@@ -59,7 +59,7 @@ td {
 }
 
 .my_table tbody tr:nth-child(even) td {
-  background-color: #2c2c2c;
+  background-color: #1d1d1d;
 }
 
 .my_table tbody tr:hover th,
@@ -184,11 +184,11 @@ div.mat-mdc-paginator-range-actions {
 }
 
 .detailsdiv {
-  border: 1px solid #08ee00;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 20px;
+  margin-top: 35px;
 }
 
 .crypto-table {
