--- a/project-web-app/src/app/news-list/news-list.component.css
+++ b/project-web-app/src/app/news-list/news-list.component.css
@@ -88,7 +88,7 @@ h3 {
 .card .content .sub-title {
   font-size: 16px;
   font-weight: 400;
-  color: var(--sub-text);
+  color: rgb(175, 175, 175);
   line-height: 20px;
   text-align: left;
 }
