--- a/project-web-app/src/app/bandeau-de-notification/bandeau-de-notification.component.css
+++ b/project-web-app/src/app/bandeau-de-notification/bandeau-de-notification.component.css
@@ -1,49 +1,29 @@
-/* beandau-notification.component.css */
 .app-notification {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #4caf50; /* Couleur de fond du bandeau */
+  bottom: 10px;
+  right: 10px;
+  background-color: #4caf50;
   color: white;
   padding: 10px;
   text-align: center;
   font-size: 18px;
-  z-index: 9999; /* Assurez-vous que le bandeau est au-dessus de tous les autres éléments */
-  transition: opacity 0.5s ease-in-out; /* Animation de disparition */
-  opacity: 0; /* Initiallement invisible */
+  z-index: 9999;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .app-notification.error {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(238, 23, 23); /* Couleur de fond du bandeau */
-  color: white;
-  padding: 10px;
-  text-align: center;
-  font-size: 18px;
-  z-index: 9999; /* Assurez-vous que le bandeau est au-dessus de tous les autres éléments */
-  transition: opacity 0.5s ease-in-out; /* Animation de disparition */
-  opacity: 0; /* Initiallement invisible */
+  margin-top: 0;
+  background-color: rgba(255, 17, 0, 0.5);
 }
 
 .app-notification.auth {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(23, 122, 235); /* Couleur de fond du bandeau */
-  color: white;
-  padding: 10px;
-  text-align: center;
-  font-size: 18px;
-  z-index: 9999; /* Assurez-vous que le bandeau est au-dessus de tous les autres éléments */
-  transition: opacity 0.5s ease-in-out; /* Animation de disparition */
-  opacity: 0; /* Initiallement invisible */
+  margin-top: 0;
+  background-color: rgba(0, 140, 255, 0.5);
 }
 
 .app-notification.visible {
-  opacity: 1; /* Rend le bandeau visible */
+  opacity: 1;
 }
